--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
   padding: 0;
 }
 body {
-    background-color: #d6caca;
+    background-image:url('bashni.jpg');
+    background-size: cover;
+    background-attachment: fixed;
  } 
 
 h1 {
@@ -10,14 +12,45 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    font-size: 18px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgb(255, 255, 255, 0.7);
+    line-height: 1.5;
+    text-align: left;
+    margin-left: 2%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    color: black;
+
+}
+
 p {
     font-size: 18px;
     line-height: 1.5;
 
-    background-color: #ffffff;
+    background-color: rgb(255, 255, 255, 0.8);
     border: 2px solid green;
     padding: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 10px;
+    max-width: 800px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    margin-left: 2%;
+
+
+}
+
+ul {
+   font-size: 18px; 
+   line-height: 1.5;
+   text-align: left;
+   margin-left: 3%;
+   color: black;
+   margin-bottom: 10%;
+
+
+
 }
